# Arbiter

./: .travis.yml  Algorithm.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  LICENSE.md  Makefile  README.md
bindings/haskell/: Setup.hs  arbiter.cabal  stack.yaml
bindings/js/: .gitignore  package.json
bindings/node/: .eslintrc.json  binding.gyp  index.js  package.json
bindings/ruby/: arbiter.c  extconf.rb
bindings/swift/: .gitignore  README.md
docs/: Nodes.xml  Tokens.xml  _algorithm_8h.html  _algorithm_8h_source.html  _arbiter_8h.html  _arbiter_8h_source.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md_source.html  _either_8h.html  _either_8h_source.html  _exception_8h.html  _exception_8h_source.html  _future_8h.html  _future_8h_source.html  _generator_8h.html  _generator_8h_source.html  _hash_8h.html  _hash_8h_source.html  _iterator_8h.html  _iterator_8h_source.html  _l_i_c_e_n_s_e_8md.html  _l_i_c_e_n_s_e_8md_source.html  _optional_8h.html  _optional_8h_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  _to_string_8h.html  _to_string_8h_source.html  annotated.html  asprintf_8h.html  asprintf_8h_source.html  bindings_2swift_2_r_e_a_d_m_e_8md.html  bindings_2swift_2_r_e_a_d_m_e_8md_source.html  class_arbiter_1_1_base-members.html  class_arbiter_1_1_base.html  class_arbiter_1_1_future-members.html  class_arbiter_1_1_future.html  class_arbiter_1_1_generator-members.html  class_arbiter_1_1_generator.html  class_arbiter_1_1_multipass_iterator-members.html  (+336 more)
docs/html/: Info.plist  Makefile  Nodes.xml  Tokens.xml  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md_source.html  _either_8h.html  _either_8h_source.html  _future_8h.html  _future_8h_source.html  _hash_8h.html  _hash_8h_source.html  _l_i_c_e_n_s_e_8md.html  _l_i_c_e_n_s_e_8md_source.html  _optional_8h.html  _optional_8h_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  _to_string_8h.html  _to_string_8h_source.html  annotated.html  class_arbiter_1_1_future-members.html  class_arbiter_1_1_future.html  class_arbiter_1_1_promise-members.html  class_arbiter_1_1_promise.html  class_arbiter_1_1_requirement_1_1_any-members.html  class_arbiter_1_1_requirement_1_1_any.html  class_arbiter_1_1_requirement_1_1_any__coll__graph.map  class_arbiter_1_1_requirement_1_1_at_least-members.html  class_arbiter_1_1_requirement_1_1_at_least.html  class_arbiter_1_1_requirement_1_1_at_least__coll__graph.md5  class_arbiter_1_1_requirement_1_1_compatible_with-members.html  class_arbiter_1_1_requirement_1_1_compatible_with.html  class_arbiter_1_1_requirement_1_1_compatible_with__coll__graph.md5  class_arbiter_1_1_requirement_1_1_exactly-members.html  class_arbiter_1_1_requirement_1_1_exactly.html  class_arbiter_1_1_requirement_1_1_exactly__coll__graph.md5  class_arbiter_1_1_shared_user_value-members.html  classes.html  (+133 more)
examples/library_folders/: .gitignore  CMakeLists.txt  README.md  asprintf.c  asprintf.h  dependencies.c  dependencies.h  main.c  strerror.c  strerror.h  string_value.c  string_value.h
examples/library_folders/fixtures/: Dependencies
examples/library_folders/fixtures/Carthage/0.1.0/: Dependencies
examples/library_folders/fixtures/Carthage/0.2.0/: Dependencies
examples/library_folders/fixtures/Carthage/1.0.0/: Dependencies
examples/library_folders/fixtures/ReactiveTask/0.1.0/: Dependencies
script/: cibuild  ciinstall  record-cartfile-dependencies  record-cartfile-dependencies.awk  record-carthage-checkouts  record-carthage-graph  test
src/: Algorithm.h  Arbiter.cpp  Arbiter.h  CMakeLists.txt  Dependency-inl.h  Dependency.cpp  Dependency.h  Either.h  Exception.cpp  Exception.h  Future.h  Generator.h  Graph.cpp  Graph.h  Hash.h  Instantiation.cpp  Instantiation.h  Iterator.h  Optional.h  Project.cpp  Project.h  Requirement-inl.h  Requirement.cpp  Requirement.h  Resolver-inl.h  Resolver.cpp  Resolver.h  Stats.cpp  Stats.h  ToString.cpp  ToString.h  Tuple.h  Types.cpp  Types.h  Value-inl.h  Value.cpp  Value.h  Version-inl.h  Version.cpp  Version.h
src/internal/: Hash.h  Optional.h
test/: CMakeLists.txt  CarthageGraphTest.cpp  RequirementTest.cpp  ResolverTest.cpp  Test.cpp  TestValue.cpp  TestValue.h  VersionTest.cpp
test/fixtures/: .gitignore
(+143 files in other folders)
